--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "gatsby-tailwind-starter",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "ReactNomad Gatsby - TailwindCSS Starter",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -19,9 +19,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/react-nomad/gatsby-tailwind-starter"
   },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "gatsby-plugin-postcss": "^6.3.0",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
